first version of abstract

--- a/field.tex
+++ b/field.tex
@@ -32,7 +32,8 @@
 
 
 \begin{abstract}
-Scanning Electrochemical Microscopy (SECM) is an invaluable tool in corrosion science. It allows the selective imaging of a particular ionic species being released at the anodic sites, using ion-selective microelectrodes (ISMEs). An often studied phenomenon is galvanic corrosion, which involves two metals in electrical contact, immersed in the same electrolyte. The measured potential of the ISME is thought to depend only on the activity of primary ion. However, an electric field is also formed as a result of the ..., which influences it directly. Therefore, the measured potential is the sum of these two. The potential caused by the electric field can be substantially strong, exceeding that of the potential associated with the activity of the primary ion. In this paper, we present experimental evidence of this, an investigate the extent to which it influences the final image. 
+
+Scanning Electrochemical Microscopy (SECM) is an invaluable tool in corrosion science. It allows the selective imaging of a particular ionic species being released at the anodic sites, using ion-selective microelectrodes (ISMEs) as scanning probes. An often studied phenomenon is galvanic corrosion, which involves two metals in electrical contact, immersed in the same electrolyte. The measured potential of the ISME is thought to depend only on the activity of primary ion. However, an electric field is also formed as a result of the ..., which has a direct influence on the potential of microelectrode. Therefore, the measured potential is the sum of these two. The potential caused by the electric field can be substantially large, exceeding that of the potential associated with the activity of the primary ion. In this paper, we present experimental evidence of this, an investigate the extent to which it influences the final image. 
 \end{abstract}
 \begin{keyword}
 	scanning electrochemical microscopy \sep potentiometry \sep galvanic corrosion \sep electric field
