First sentences in results

--- a/field.tex
+++ b/field.tex
@@ -85,6 +85,12 @@ Eq. \ref{eq:rc} describes the transient cell response when the measuring electro
 \section{Material and methods}
 \section{Results and discussion}
 
+First, consecutive approaching curves were recorded above the corroding AZ63 sample, while the galvanic connection with the iron sample was...
+
+The moment the galvanic connection was established, there was an immediate rise of about 140 mV in the measured potential of the microelectrode [fig], which cannot possibly be attributed to the increase of $Mg^{2+}$ activity that far from the source. Also, a 140 mV rise would mean an increase of about 3.5 orders of magnitude in $Mg^{2+}$ activity in less then a second. Even if one argues it's possible 100 $\upmu$m from the source, it cannot be the case 1000 $\upmu$m from it. The only plausable explanation is that sudden change is due to the electric field formed between the two metals. 
+
+
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% FIGURE EXAMPLE %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \def\s{0.25}
 \begin{figure}
