--- a/field.tex
+++ b/field.tex
@@ -43,6 +43,15 @@ Scanning Electrochemical Microscopy (SECM) is an invaluable tool in corrosion sc
 \section{Introduction}
 Citation \cite{artefacts}.
 
+\begin{figure}[h!]
+\centering
+% trim = top left bottom right
+\includegraphics[width=0.4\textwidth]{abstract.eps}
+\caption{Caption.}
+\label{fig:abstract}
+\end{figure}
+
+
 
 \begin{figure}
 \centering
