--- a/field.tex
+++ b/field.tex
@@ -33,7 +33,14 @@
 
 \begin{abstract}
 
-Scanning Electrochemical Microscopy (SECM) is an invaluable tool in corrosion science. It allows the selective imaging of a particular ionic species being released at the anodic sites, using ion-selective microelectrodes (ISMEs) as scanning probes. An often studied phenomenon is galvanic corrosion, which involves two metals in electrical contact, immersed in the same electrolyte. The measured potential of the ISME is thought to depend only on the activity of primary ion. However, an electric field is also formed as a result of the ..., which has a direct influence on the potential of microelectrode. Therefore, the measured potential is the sum of these two. The potential caused by the electric field can be substantially large, exceeding that of the potential associated with the activity of the primary ion. In this paper, we present experimental evidence of this, an investigate the extent to which it influences the final image. 
+Scanning Electrochemical Microscopy (SECM) is an invaluable tool in corrosion science.
+It allows the selective imaging of a particular ionic species being released at the anodic sites, using ion-selective microelectrodes (ISMEs) as scanning probes.
+An often studied phenomenon is galvanic corrosion, which involves two metals in electrical contact, immersed in the same electrolyte.
+The measured potential of the ISME is thought to depend only on the activity of primary ion.
+However, an electric field is also formed as a result of the potential difference between the surfaces of the galvanic pair, which has a direct influence on the potential of the microelectrode.
+Therefore, the measured potential is the sum of these two.
+The potential difference caused by the electric field can be substantially large, exceeding that of the potential difference associated with the activity of the primary ion.
+In this paper, we present experimental evidence of this, and investigate the extent to which it influences the final image. 
 \end{abstract}
 \begin{keyword}
 	scanning electrochemical microscopy \sep potentiometry \sep galvanic corrosion \sep electric field
@@ -46,50 +53,10 @@ Citation \cite{artefacts}.
 \begin{figure}[h!]
 \centering
 % trim = top left bottom right
-\includegraphics[width=0.4\textwidth]{abstract.eps}
+\includegraphics[width=0.5\textwidth]{abstract.eps}
 \caption{Caption.}
 \label{fig:abstract}
 \end{figure}
-
-
-
-\begin{figure}
-\centering
-\begin{tikzpicture}
-\begin{axis}[xmin=-1,xmax=11,ymin=-0.1,ymax=1.1,xlabel={time (RC)}, ylabel={normalized potential difference},no markers,samples=50,grid=both]
-        \addplot[domain=0:5, black] {1-exp(-x)};
-        \addplot[domain=-1:0, red] {0};
-        \draw [color=red, dashed] (10,10) -- (10,110);
-        \addplot[domain=0:5, red] {1};
-        \addplot[domain=5:11, black] {exp(-x+5)};
-        \draw [color=red, dashed] (60,10) -- (60,110);
-        \addplot[domain=5:11, red] {0};
-        \draw [color=red, fill=white] (10,10) circle [radius=0.1cm];
-        \draw [color=red, fill=white] (10,110) circle [radius=0.1cm];
-        \draw [color=red, fill=red] (10,60) circle [radius=0.1cm];
-        \draw [color=red, fill=white] (60,10) circle [radius=0.1cm];
-        \draw [color=red, fill=white] (60,110) circle [radius=0.1cm];
-        \draw [color=red, fill=red] (60,60) circle [radius=0.1cm];
-        \draw [color=black, fill=black] (20,73.2) circle [radius=0.1cm] node[right] {0.632};
-        \draw [color=black, fill=black] (40,105) circle [radius=0.1cm] node[below] {0.95};
-        \draw [color=black, fill=black] (70,46.8) circle [radius=0.1cm] node[right] {0.368};
-        \draw [color=black, fill=black] (90,15) circle [radius=0.1cm] node[above] {0.05};
-\end{axis}
-\end{tikzpicture}
-\caption[Charging and discharging the series $RC$ circuit.]{Charging and discharging the series $RC$ circuit.
-Red: normalized input voltage ($V_{in}$) to the series $RC$ circuit, two consecutive \emph{Heaviside step functions}, the second one is inversed and shifted $5RC$ to the right.
-Black: normalized output voltage ($V_{out}$) of the series $RC$ circuit.}
-\label{fig:charge_discharge}
-\end{figure}
-
-
-\section{Theory}
-Eq. \ref{eq:rc} describes the transient cell response when the measuring electrode is brought to contact with a solution of different analyte activity.
-
-\begin{equation}
-\label{eq:rc}
-	E_{cell}(t) = E_{cell}(\infty) + [E_{cell}(0) - E_{cell}(\infty)]e^{-t/RC}
-\end{equation}
 
 \section{Material and methods}
 \section{Results and discussion}
@@ -97,7 +64,6 @@ Eq. \ref{eq:rc} describes the transient cell response when the measuring electro
 First, consecutive approaching curves were recorded above the corroding AZ63 sample, while the galvanic connection with the iron sample was...
 
 The moment the galvanic connection was established, there was an immediate rise of about 140 mV in the measured potential of the microelectrode [fig], which cannot possibly be attributed to the increase of $Mg^{2+}$ activity that far from the source. Also, a 140 mV rise would mean an increase of about 3.5 orders of magnitude in $Mg^{2+}$ activity in less then a second. Even if one argues it's possible 100 $\upmu$m from the source, it cannot be the case 1000 $\upmu$m from it. The only plausable explanation is that sudden change is due to the electric field formed between the two metals. 
-
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% FIGURE EXAMPLE %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -109,17 +75,6 @@ The moment the galvanic connection was established, there was an immediate rise 
 \caption{Caption.}
 \label{fig:label1}
 \end{figure}
-
-\begin{figure}
-\centering
-% trim = top left bottom right
-\includegraphics[width=\s\textwidth, angle=-90]{test.eps}
-
-\includegraphics[width=\s\textwidth, angle=-90]{test_deconvoluted.eps}
-\caption{Caption.}
-\label{fig:label1}
-\end{figure}
-
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% TABLE EXAMPLE %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{table}
