--- a/field.tex
+++ b/field.tex
@@ -37,7 +37,8 @@ Scanning Electrochemical Microscopy (SECM) is an invaluable tool in corrosion sc
 It allows the selective imaging of a particular ionic species being released at the anodic sites, using ion-selective microelectrodes (ISMEs) as scanning probes.
 An often studied phenomenon is galvanic corrosion, which involves two metals in electrical contact, immersed in the same electrolyte.
 The measured potential of the ISME is thought to depend only on the activity of primary ion.
-However, an electric field is also formed as a result of the potential difference between the surfaces of the galvanic pair, which has a direct influence on the potential of the microelectrode.
+However, an electric field is also formed as a result of the potential difference between the surfaces of the galvanic pair, 
+zwhich has a direct influence on the potential of the microelectrode.
 Therefore, the measured potential is the sum of these two.
 The potential difference caused by the electric field can be substantially large, exceeding that of the potential difference associated with the activity of the primary ion.
 In this paper, we present experimental evidence of this, and investigate the extent to which it influences the final image. 
