--- a/field.tex
+++ b/field.tex
@@ -53,7 +53,7 @@ In this paper, we present experimental evidence of this, and investigate the ext
 In the past decade, potentiometric SECM - or in other words used by the experts of this field Scanning Ion Selective Electrode Technique (SIET) - has become very popular among corrosion scientists. The most broad spread application is the visualization of galvanic corrosion.
 Galvanic corrosion occurs when two dissimilar metals are connected both electrically and immersed in the same electrolyte. The electric coupling results the preferential and accelerated dissolution of the anode, while reduces corrosion rate of the cathode. The spatial separation of the anodic and the cathodic sites makes the complex corrosion processes easily interpretable and due to the increased corrosion rate conveniently short exposure times are sufficient to obtain convincing concentration distributions in the solution adjacent to the corroding sample. Despite these beneficial circumstances, quantitative evaluation of galvanic corrosion using potentiometric SECM often fails due to – up to now – unrevealed reasons.
 Izquierdo et. al. reported discrepant results comparing vertical approaching curves towards the cathode of the Mg-Fe galvanic couple obtained by amperometric O2 detection and potentiometric pH measurements. Local alkalinization could be detected even at 2 mm tip-substrate distance, whereas oxygen concentration reached the bulk level at ca. 900 /mum height. The phenomenon was explained by the contribution of the electric field to the potentiometric signal.  
-In another works, Mg^{2+} above Mg alloy disc galvanically coupled to iron detected with Mg ISME highly exceeded the upper limit of detection of the probe.
+In another works, $Mg^{2+}$ above Mg alloy disc galvanically coupled to iron detected with Mg ISME highly exceeded the upper limit of detection of the probe.
 On the other hand, pMg values fallen behind lower limit of detection of Mg ISMEs scanning above cathodically polarized magnesium strips. 
 
 Citation .
