--- a/field.tex
+++ b/field.tex
@@ -50,13 +50,12 @@ In this paper, we present experimental evidence of this, and investigate the ext
 
 \section{Introduction}
 
-In the past decade, potentiometric SECM - or in other words used by the experts of this field Scanning Ion Selective Electrode Technique (SIET) - has become very popular among corrosion scientists. The most broad spread application is the visualization of galvanic corrosion.
+In the past decade, potentiometric SECM - or in other words used by the experts of this field Scanning Ion Selective Electrode Technique (SIET) - has become very popular among corrosion scientists\cite{lamaka, ZnISME, diamondel, cutedge, H+selective, simulating}. The most broad spread application is the visualization of galvanic corrosion\cite{amperopot, chloride, spatiozn, fezn}.
 Galvanic corrosion occurs when two dissimilar metals are connected both electrically and immersed in the same electrolyte. The electric coupling results the preferential and accelerated dissolution of the anode, while reduces corrosion rate of the cathode. The spatial separation of the anodic and the cathodic sites makes the complex corrosion processes easily interpretable and due to the increased corrosion rate conveniently short exposure times are sufficient to obtain convincing concentration distributions in the solution adjacent to the corroding sample. Despite these beneficial circumstances, quantitative evaluation of galvanic corrosion using potentiometric SECM often fails due to – up to now – unrevealed reasons.
-Izquierdo et. al. reported discrepant results comparing vertical approaching curves towards the cathode of the Mg-Fe galvanic couple obtained by amperometric O2 detection and potentiometric pH measurements. Local alkalinization could be detected even at 2 mm tip-substrate distance, whereas oxygen concentration reached the bulk level at ca. 900 /mum height. The phenomenon was explained by the contribution of the electric field to the potentiometric signal.  
-In another works, $Mg^{2+}$ above Mg alloy disc galvanically coupled to iron detected with Mg ISME highly exceeded the upper limit of detection of the probe.
-On the other hand, pMg values fallen behind lower limit of detection of Mg ISMEs scanning above cathodically polarized magnesium strips. 
+Izquierdo et. al. reported discrepant results comparing vertical approaching curves towards the cathode of the Mg-Fe galvanic couple obtained by amperometric $O_2$ detection and potentiometric pH measurements \cite{pH15}. Local alkalinization could be detected even at 2 mm tip-substrate distance, whereas oxygen concentration reached the bulk level at ca. 900 $\upmu$m height. The phenomenon was explained by the contribution of the electric field to the potentiometric signal.  
+In another works, $Mg^{2+}$ above Mg alloy disc galvanically coupled to iron detected with Mg ISME highly exceeded the upper limit of detection of the probe \cite{overmg1, overmg2, overmg3}.
+On the other hand, pMg values fallen behind lower limit of detection of Mg ISMEs scanning above cathodically polarized magnesium strips \cite{belowmg}. 
 
-Citation .
 
 \begin{figure}[h!]
 \centering
@@ -108,8 +107,29 @@ This research was supported by the European Union and the State of Hungary, co-f
 
 \begin{thebibliography}{5}
 
-\bibitem{artefacts}S.V. Lamaka, M.G. Taryba, M.L. Zheludkevich, M.G.S. Ferreira, Novel Solid‐Contact Ion‐Selective Microelectrodes for Localized Potentiometric Measurements Electroanalysis 21 (2009) 2447-2453.
-\bibitem{artefacts}
+\bibitem{lamaka}S.V. Lamaka, M.G. Taryba, M.L. Zheludkevich, M.G.S. Ferreira, Novel Solid‐Contact Ion‐Selective Microelectrodes for Localized Potentiometric Measurements Electroanalysis 21 (2009) 2447-2453.
+\bibitem{ZnISME}J. Izquierdo, L. Nagy, Á.s Varga, I. Bitter, G. Nagy, R. M. Souto Scanning electrochemical microscopy for the investigation of corrosion processes: Measurement of  $Zn^{2+}$ spatial distribution with ion selective microelectrodes Electrochimica Acta 59 (2012) 398–403. 
+\bibitem{diamondel}E.L. Silva, A.C. Bastos, M.A. Neto, R.F. Silva, M.G.S. Ferreira, M.L. Zheludkevich, F.J. Oliveira Novel diamond microelectrode for pH sensing Electrochemistry Communications 40 (2014) 31–34.
+\bibitem{cutedge}A. Alvarez-Pampliega, S.V. Lamaka, M.G. Taryba, M. Madani, J. De Strycker, E. Tourwé, M.G.S. Ferreira, H. Terryn Cut-edge corrosion study on painted aluminum rich metallic coated steel by scanning vibrating electrode and micro-potentiometric techniques Electrochimica Acta 61 (2012) 107–117.	
+\bibitem{H+selective}E. A. Zdrachek. A. G. Karotkaya, V. A. Nazarov,K. A. Andronchyk, L. S. Stanishevskii, V. V. Egorov, M. G. Taryba, D. Snihirova, M. Kopylovich, S. V. Lamaka $H^{+}$-selective microelectrodes with optimized measuring range for corrosion studies  Sensors and Actuators B 207 (2015) 967–975.
+\bibitem{simulating}H. Shi, Z. Tian, T. Hu, F. Liu, E. H. Han, M. Taryba, S.V. Lamaka Simulating corrosion of Al2CuMg phase by measuring ionic currents, chloride concentration and pH Corrosion Science 88 (2014) 178–186.
+\bibitem{amperopot}J. Izquierdo, L. Nagy, J. J. Santana, G. Nagy, R. M. Souto A novel microelectrochemical strategy for the study of corrosion inhibitors employing the scanning vibrating electrode technique and dual potentiometric/amperometric operation in scanning electrochemical microscopy: Application to the study of the cathodic inhibition by benzotriazole of the galvanic corrosion of copper coupled to iron Electrochimica Acta 58 (2011) 707–716.
+\bibitem{chloride}V. A. Nazarov, M. G. Taryba, E. A. Zdrachek, K. A. Andronchyk, V. V. Egorov, S. V. Lamaka Sodium- and chloride-selective microelectrodes optimized for corrosion studies Journal of Electroanalytical Chemistry 706 (2013) 13–24.
+\bibitem{spatiozn}E. Tada, S. Satoh, H. Kaneko,The spatial distribution of $Zn^{2+}$ during galvanic corrosion of a Zn/steel couple Electrochimica Acta 49 (2004) 2279–2285.
+\bibitem{fezn}A.G. Marques M. Taryba A.S. Pan˜ao S. Lamaka A.M. Simoes Application of scanning electrode techniques for the evaluation of iron–zinc corrosion in nearly neutral chloride solutions Corrosion Science 104 (2016) 123-131.
+\bibitem{pH15}J. Izquierdo, L. Nagy, I. Bitter, Ricardo M. Souto, G. Nagy 
+Potentiometric scanning electrochemical microscopy for the local characterization of the electrochemical behaviour of magnesium-based materials Electrochimica Acta 87 (2013) 283–293.
+\bibitem{overmg1}R. M. Souto, A. Kiss, J. Izquierd, L. Nagy, I. Bitter, G. Nagy Spatially-resolved imaging of concentration distributions on corroding magnesium-based materials exposed to aqueous environments by SECM Electrochemistry Communications 26 (2013) 25–28.
+\bibitem{overmg2}R.M. Souto, J Izquierdo, J.J. Santana, A Kiss, L Nagy, G Nagy 
+Progress in Scanning Electrochemical Micro scopy by Coupling Potentiometric and Amperometric Measurement Modes
+In: Gabor Nagy, Gyula Pinczes, Gabor Pinter, Istvan Pocsi, Jozsef Prokisch, Gaspar Banfalvi
+A Méndez-Vilas (szerk.)
+Current microscopy contributions to advances in science and technology. Spain: Formatex Research Center, 2012. pp. 1407-1415.
+\bibitem{overmg3}J. Izquierdo, A. Kiss, J. J. Santana, L. Nagy, I. Bitter, H. S. Isaacs, G. Nagy, R. M. Souto
+Development of $Mg^{2+}$ Ion-Selective Microelectrodes for Potentiometric Scanning Electrochemical Microscopy Monitoring of Galvanic Corrosion Processes
+Journal of the Electrochemical Society  160 (2013) 451-459. 
+\bibitem{belowmg}J. Izquierdo, B. M. Fernández-Pérez, D. Filotás, Z. Őri, A. Kiss, R.T. Martín-Gómez, L. Nagy, G. Nagy, R. M. Souto Imaging of Concentration Distributions and Hydrogen Evolution on Corroding Magnesium Exposed to Aqueous Environments Using Scanning Electrochemical Microscopy Electroanalysis 28 (2016) 1–14.
+
 \end{thebibliography}
 
 \end{document}
