first version of 2D figs

--- a/field.tex
+++ b/field.tex
@@ -96,6 +96,16 @@ Eq. \ref{eq:rc} was fitted (red line) on the measurement (gray marks) from the p
 \end{figure}
 
 
+\def\s{0.35}
+\begin{figure}
+\centering
+% trim = top left bottom right
+\includegraphics[trim = 10mm 20mm 0mm 10mm, clip, width=\s\textwidth, angle=-90]{17012501.eps}\includegraphics[trim = 10mm 20mm 0mm 10mm, clip, width=\s\textwidth, angle=-90]{17012503_deconvoluted.eps}
+\caption{Caption.}
+\label{fig:label1}
+\end{figure}
+
+
 
 
 
