--- a/field.tex
+++ b/field.tex
@@ -66,6 +66,10 @@ On the other hand, pMg values fallen behind lower limit of detection of Mg ISMEs
 \end{figure}
 
 \section{Material and methods}
+
+
+The preparation of solid contanct $Mg^{2+}$ selective microelectrodes was adopted from a previous work \cite{overmg3}. Micropipettes were pulled from borosilicate capillaries (outer diameter Ø = 1.5 mm, inner dia. Ø = 1.0 mm, obtained from Hilgenberg GmbH, Malsfeld, Germany) with a Sutter Instruments P-30 type vertical capillary puller (Novato, CA, USA). The micropipette were soaked in 1:1 $H_2SO_4$:$H_2O_2$ solution and washed with double deionized water. The capillaries were silanized by 1 hour exposition the saturated vapour of dichloro-dimethyl-silane in closed Petri dishes at 120 °C. A poly-ethylen-dioxy-thiophene (PEDOT) coated carbon fiber of 33 μm diameter (obtained as a generous gift from Specialty Materials, Lowell, MA, USA) served as the solid contact of the ISME. The PEDOT was electrochemically polymerized to the carbon fiber in 0.1 M EDOT-containing $BMIM-PF_6$ ionic liquid solution. 10 consecutive cyclic voltammetry cycles were taken in −0.9 ≤ E ≤ 1.3 V range. The doping step was performed in 0.1 M KCl aqueous solution by applying 15 consecutive potential cycles in the −0.9 ≤ E ≤ 0.8 V range. The membrane components were purchased from Fluka (Buchs, Switzerland). The cocktail contains N,N'′-Octamethylene-bis(N′-heptyl-N′-methyl-methylmalonamide inophore, 2-nitrophenyl-octyl ether emollient, PVC, potassium-[tetrakis-4-chlorophenyl]-borate and tetrahydrofuran. Eventually, the micropipette wre frontfilled with the coctail and the PEDOT coated carbon fiber was inserted in the lumen of the capillary.
+
 \section{Results and discussion}
 
 First, consecutive approaching curves were recorded above the corroding AZ63 sample, while the galvanic connection with the iron sample was...
