--- a/field.tex
+++ b/field.tex
@@ -71,6 +71,10 @@ On the other hand, pMg values fallen behind lower limit of detection of Mg ISMEs
 The preparation of solid contanct $Mg^{2+}$ selective microelectrodes was adopted from a previous work \cite{overmg3}. Micropipettes were pulled from borosilicate capillaries (outer diameter $\oslash$ = 1.5 mm, inner dia. $\oslash$ = 1.0 mm, obtained from Hilgenberg GmbH, Malsfeld, Germany) with a Sutter Instruments P-30 type vertical capillary puller (Novato, CA, USA). The micropipette were soaked in 1:1 $H_2SO_4$:$H_2O_2$ solution and washed with double deionized water. The capillaries were silanized by 1 hour exposition the saturated vapour of dichloro-dimethyl-silane in closed Petri dishes at 120 $\celsius$. A poly-ethylen-dioxy-thiophene (PEDOT) coated carbon fiber of 33 $\upmu$m diameter (obtained as a generous gift from Specialty Materials, Lowell, MA, USA) served as the solid contact of the ISME. The PEDOT was electrochemically polymerized to the carbon fiber in 0.1 M EDOT-containing $BMIM-PF_6$ ionic liquid solution. 10 consecutive cyclic voltammetry cycles were taken in -0.9 $\leq$ E $\leq$ 1.3 V range. The doping step was performed in 0.1 M KCl aqueous solution by applying 15 consecutive potential cycles in the -0.9 $\leq$ E $\leq$ 0.8 V range. The membrane components were purchased from Fluka (Buchs, Switzerland). The cocktail contains N,N''-Octamethylene-bis(N'-heptyl-N'-methyl-methylmalonamide inophore, 2-nitrophenyl-octyl ether emollient, PVC, potassium-[tetrakis-4-chlorophenyl]-borate and tetrahydrofuran. Eventually, the micropipette wre frontfilled with the coctail and the PEDOT coated carbon fiber was inserted in the lumen of the capillary.
 The Mg ISMEs were calibrated by measuring their potential against Ag/AgCl/KCl (3M) reference electrode in tenfold diluted $MgCl_2$ solutions between $10^{-7}$ and $10^{-1}$ M concentrations. The activities were calculated using the Debye-Hückel theory. Nernstian relationship was found in between $10^{-1}$ and $10^{-5}$ M, the equation of the linear portion of the calibration curve is -29.5mV/decade+98.3mV ($R^2=0.9997$). The lower limit of detection was pMg=5.3. 
 
+The (Mg/Al)/Fe galvanic couple target was prepared from  AZ63 Mg/Al alloy and high purity Fe wires with identical diameter of 0.76 mm. The wires were mounted in an epoxy resin sleeve (Struers, Ballerup, Denmark)., exposing only the disk shaped surfaces and allowing to make electric contact at the rear of the mould. Frontal surface of the mould was first polished with SiC paper down to 4000 grit, then with 1.0, 0.3 µm alumina powder.
+
+SECM experiments were carried out employing homemade instrument operated with custom software. The sample was placed at the bottom of the electrochemical cell, whereas the local potential values of the Mg ISMEs were measured with against a Ag/AgCl (3M KCl) reference electrode. All the measurements were performed using a high input impedance eDAQ pH ISE isoPod USB(eDAQ Pty Ltd, Australia).
+
 \section{Results and discussion}
 
 First, consecutive approaching curves were recorded above the corroding AZ63 sample, while the galvanic connection with the iron sample was...
