started with conclusions

--- a/field.tex
+++ b/field.tex
@@ -19,7 +19,7 @@
 
 \begin{frontmatter}
 
-\title{The effect of electric field on potentiometric Scanning Electrochemical Microscopic images}
+\title{The effect of electric field on potentiometric Scanning Electrochemical Microscopic imaging}
 \cortext[cor]{Corresponding author}
 \author[akiss]{András Kiss\corref{cor}}
 \address[akiss, gnagy]{Department of General and Physical Chemistry, Faculty of Sciences, University of Pécs, 7624 Pécs, Ifjúság útja 6, Hungary}
@@ -145,11 +145,8 @@ The moment the galvanic connection was established, there was an immediate rise 
 %\addlegendentry{$E = - 280 + 97 (e^{-t/9} + e^{-t/0.5577})/2$}
 \end{axis}
 \end{tikzpicture}
-
-\caption[Transient response of the antimony microelectrode to analyte activity step.]{Transient response of the antimony microelectrode to analyte activity step.
-The measuring and reference electrodes were dipped into buffer solutions with pH = 4 before the measurements started, and pH = 6 at t = 0 s, respectively.
-Eq. \ref{eq:rc} was fitted (red line) on the measurement (gray marks) from the pH step to the end of the curve when potential reaches equilibrium in the pH = 6 buffer.}
-\label{fig:transient}
+\caption{Caption.}
+\label{fig:approach}
 \end{figure}
 
 
@@ -170,8 +167,11 @@ Eq. \ref{eq:rc} was fitted (red line) on the measurement (gray marks) from the p
 
 
 \section{Conclusions}
+
+Experimental evidence has been provided to confirm the suspicion experts in corrosion science has been suspected; the effect of the electric field in certain potentiometric SECM experiments -- where a strong electric field is being formed -- causes a significant over- or underestimation of the real primary ion activity. In  
+
+
 \section*{Acknowledgements}
-This research was supported by the European Union and the State of Hungary, co-financed by the European Social Fund in the framework of T\'{A}MOP-4.2.4.A/ 2-11/1-2012-0001 'National Excellence Program' and T\'{A}MOP-4.2.2.A-11/1/KONV-2012-0065.
 
 \section*{References}
 
