--- a/field.tex
+++ b/field.tex
@@ -37,9 +37,8 @@ Scanning Electrochemical Microscopy (SECM) is an invaluable tool in corrosion sc
 It allows the selective imaging of a particular ionic species being released at the anodic sites, using ion-selective microelectrodes (ISMEs) as scanning probes.
 An often studied phenomenon is galvanic corrosion, which involves two metals in electrical contact, immersed in the same electrolyte.
 The measured potential of the ISME is thought to depend only on the activity of primary ion.
-However, an electric field is also formed as a result of the potential difference between the surfaces of the galvanic pair, 
-which has a direct influence on the potential of the microelectrode; the measured potential is the sum of these two.
-The potential difference caused by the electric field can be substantially large, exceeding that of the potential difference associated with the activity of the primary ion.
+However, an electric field is also formed as a result of the potential difference between the surfaces of the galvanic pair, which has a direct influence on the potential of the microelectrode; the measured potential is the sum of these two.
+The potential difference caused by the electric field can be substantially large, exceeding that of the potential difference associated with the activity of the primary ion, leading to large errors in estimating the activity of the primary ion.
 In this paper, we present experimental evidence of this, and investigate the extent to which it influences the final image. 
 \end{abstract}
 \begin{keyword}
@@ -168,7 +167,9 @@ The moment the galvanic connection was established, there was an immediate rise 
 
 \section{Conclusions}
 
-Experimental evidence has been provided to confirm the suspicion experts in corrosion science has been suspected; the effect of the electric field in certain potentiometric SECM experiments -- where a strong electric field is being formed -- causes a significant over- or underestimation of the real primary ion activity. In  
+Experimental evidence has been provided to confirm the suspicion experts in corrosion science has had for a while; the effect of the electric field in certain potentiometric SECM experiments -- where a strong electric field is being formed -- causes a significant over- or underestimation of the real primary ion activity. The reason for this is that the electric field has a direct influence on the measured potential.
+
+Based on the results of this work, this influence should be negated by bringing the reference and measuring electrodes very close together, so the electric field ,,experienced'' by the two is equal, therefore cancels out. Another solution might be to operate an electronic relay as a switch between the galvanic couple, and disconnect them for a very short period of time, while the measurement is performed. These two possible solutions will be subject to investigations in future work of our research group.
 
 
 \section*{Acknowledgements}
