--- a/field.tex
+++ b/field.tex
@@ -48,13 +48,16 @@ In this paper, we present experimental evidence of this, and investigate the ext
 
 \section{Introduction}
 
-In the past decade, potentiometric SECM - or in other words used by the experts of this field Scanning Ion Selective Electrode Technique (SIET) - has become very popular among corrosion scientists\cite{lamaka, ZnISME, diamondel, cutedge, H+selective, simulating}. The most broad spread application is the visualization of galvanic corrosion\cite{amperopot, chloride, spatiozn, fezn}.
-Galvanic corrosion occurs when two dissimilar metals are connected both electrically and immersed in the same electrolyte. The electric coupling results the preferential and accelerated dissolution of the anode, while reduces corrosion rate of the cathode. The spatial separation of the anodic and the cathodic sites makes the complex corrosion processes easily interpretable and due to the increased corrosion rate conveniently short exposure times are sufficient to obtain convincing concentration distributions in the solution adjacent to the corroding sample.
+In the past decade, potentiometric SECM -- or as referred to by the experts of this field Scanning Ion Selective Electrode Technique (SIET) -- has become very popular among corrosion scientists \cite{lamaka, ZnISME, diamondel, cutedge, H+selective, simulating}.
+The most broad spread application is the visualization of galvanic corrosion \cite{amperopot, chloride, spatiozn, fezn}.
+Galvanic corrosion occurs when two dissimilar metals are connected both electrically and immersed in the same electrolyte. 
+The electric coupling results the preferential and accelerated dissolution of the anode, while reduces corrosion rate of the cathode.
+The spatial separation of the anodic and the cathodic sites makes the complex corrosion processes easily interpretable and due to the increased corrosion rate conveniently short exposure times are sufficient to obtain convincing images about concentration distributions in the solution adjacent to the corroding sample.
 
-Despite these beneficial circumstances, quantitative evaluation of galvanic corrosion using potentiometric SECM often fails due to – up to now – unrevealed reasons.
-Izquierdo et. al. reported discrepant results comparing vertical approaching curves towards the cathode of the Mg-Fe galvanic couple obtained by amperometric $O_2$ detection and potentiometric pH measurements \cite{pH15}. Local alkalinization could be detected even at 2 mm tip-substrate distance, whereas oxygen concentration reached the bulk level at ca. 900 $\upmu$m height. The phenomenon was explained by the contribution of the electric field to the potentiometric signal.  
-In another works, $Mg^{2+}$ above Mg alloy disc galvanically coupled to iron detected with Mg ISME highly exceeded the upper limit of detection of the probe \cite{overmg1, overmg2, overmg3}.
-On the other hand, pMg values fallen behind lower limit of detection of Mg ISMEs scanning above cathodically polarized magnesium strips \cite{belowmg}. 
+Despite these beneficial circumstances, quantitative evaluation of galvanic corrosion using potentiometric SECM often fails due to –- up to now –- unrevealed reasons.
+Izquierdo et. al. reported discrepant results comparing vertical approaching curves towards the cathode of the Mg-Fe galvanic couple obtained by amperometric O$_2$ detection and potentiometric pH measurements \cite{pH15}. Local alkalinization could be detected even at 2 mm tip-substrate distance, whereas oxygen concentration reached the bulk level at ca. 900 $\upmu$m height. The phenomenon was explained by the contribution of the electric field to the potentiometric signal.  
+In another works, Mg$^{2+}$ above Mg alloy disc galvanically coupled to iron detected with Mg ISME highly exceeded the upper limit of detection of the probe \cite{overmg1, overmg2, overmg3}.
+On the other hand, pMg values fallen below the lower limit of detection of Mg ISMEs scanning above cathodically polarized magnesium strips \cite{belowmg}. 
 
 These phenomenon could be explained by a contribution of the electric field to the measured potential. The potential difference between the surfaces of the anode and the cathode causes an electric field to be formed. The potential difference between the points where the electrodes are located is added to the potential difference associated with the primary ion activity at the tip of the measuring electrode:
 
@@ -82,14 +85,12 @@ where $S$ is the slope of the calibration curve of the potentiometric cell with 
 
 The effect of the electric field on the measured potential difference has been investigated in this paper. The galvanic corrosion of the AZ63 Mg-Al alloy and iron was used as a model system.
 
-
 \section{Material and methods}
 
+The preparation of solid contanct $Mg^{2+}$ selective microelectrodes was adopted from a previous work \cite{overmg3}. Micropipettes were pulled from borosilicate capillaries (outer diameter $\oslash$ = 1.5 mm, inner dia. $\oslash$ = 1.0 mm, obtained from Hilgenberg GmbH, Malsfeld, Germany) with a Sutter Instruments P-30 type vertical capillary puller (Novato, CA, USA). The micropipette were soaked in 1:1 H$_2$SO$_4$:H$_2$O$_2$ solution and washed with double deionized water. The capillaries were silanized by 1 hour exposition the saturated vapour of dichloro-dimethyl-silane in closed Petri dishes at 120 $\celsius$. A poly-ethylen-dioxy-thiophene (PEDOT) coated carbon fiber of 33 $\upmu$m diameter (obtained as a generous gift from Specialty Materials, Lowell, MA, USA) served as the solid contact of the ISME. The PEDOT was electrochemically polymerized to the carbon fiber in 0.1 M EDOT-containing BMIM-PF$_6$ ionic liquid solution. 10 consecutive cyclic voltammetry cycles were taken in -0.9 $\leq$ E $\leq$ 1.3 V range. The doping step was performed in 0.1 M KCl aqueous solution by applying 15 consecutive potential cycles in the -0.9 $\leq$ E $\leq$ 0.8 V range. The membrane components were purchased from Fluka (Buchs, Switzerland). The cocktail contains N,N''-Octamethylene-bis(N'-heptyl-N'-methyl-methylmalonamide inophore, 2-nitrophenyl-octyl ether emollient, PVC, potassium-[tetrakis-4-chlorophenyl]-borate and tetrahydrofuran. Eventually, the micropipette was frontfilled with the cocktail and the PEDOT coated carbon fiber was inserted in the lumen of the capillary.
+The Mg ISMEs were calibrated by measuring their potential against Ag/AgCl/KCl (3M) reference electrode in tenfold diluted MgCl$_2$ solutions between $10^{-7}$ and $10^{-1}$ M concentrations. The activities were calculated using the Debye-Hückel theory. Nernstian relationship was found in between $10^{-1}$ and $10^{-5}$ M, the equation of the linear portion of the calibration curve is -29.5 mV/decade + 98.3 mV ($R^2=0.9997$). The lower limit of detection was pMg = 5.3. 
 
-The preparation of solid contanct $Mg^{2+}$ selective microelectrodes was adopted from a previous work \cite{overmg3}. Micropipettes were pulled from borosilicate capillaries (outer diameter $\oslash$ = 1.5 mm, inner dia. $\oslash$ = 1.0 mm, obtained from Hilgenberg GmbH, Malsfeld, Germany) with a Sutter Instruments P-30 type vertical capillary puller (Novato, CA, USA). The micropipette were soaked in 1:1 $H_2SO_4$:$H_2O_2$ solution and washed with double deionized water. The capillaries were silanized by 1 hour exposition the saturated vapour of dichloro-dimethyl-silane in closed Petri dishes at 120 $\celsius$. A poly-ethylen-dioxy-thiophene (PEDOT) coated carbon fiber of 33 $\upmu$m diameter (obtained as a generous gift from Specialty Materials, Lowell, MA, USA) served as the solid contact of the ISME. The PEDOT was electrochemically polymerized to the carbon fiber in 0.1 M EDOT-containing $BMIM-PF_6$ ionic liquid solution. 10 consecutive cyclic voltammetry cycles were taken in -0.9 $\leq$ E $\leq$ 1.3 V range. The doping step was performed in 0.1 M KCl aqueous solution by applying 15 consecutive potential cycles in the -0.9 $\leq$ E $\leq$ 0.8 V range. The membrane components were purchased from Fluka (Buchs, Switzerland). The cocktail contains N,N''-Octamethylene-bis(N'-heptyl-N'-methyl-methylmalonamide inophore, 2-nitrophenyl-octyl ether emollient, PVC, potassium-[tetrakis-4-chlorophenyl]-borate and tetrahydrofuran. Eventually, the micropipette wre frontfilled with the coctail and the PEDOT coated carbon fiber was inserted in the lumen of the capillary.
-The Mg ISMEs were calibrated by measuring their potential against Ag/AgCl/KCl (3M) reference electrode in tenfold diluted $MgCl_2$ solutions between $10^{-7}$ and $10^{-1}$ M concentrations. The activities were calculated using the Debye-Hückel theory. Nernstian relationship was found in between $10^{-1}$ and $10^{-5}$ M, the equation of the linear portion of the calibration curve is -29.5mV/decade+98.3mV ($R^2=0.9997$). The lower limit of detection was pMg=5.3. 
-
-The (Mg/Al)/Fe galvanic couple target was prepared from  AZ63 Mg/Al alloy and high purity Fe wires with identical diameter of 0.76 mm. The wires were mounted in an epoxy resin sleeve (Struers, Ballerup, Denmark)., exposing only the disk shaped surfaces and allowing to make electric contact at the rear of the mould. Frontal surface of the mould was first polished with SiC paper down to 4000 grit, then with 1.0, 0.3 $\upmu$m alumina powder.
+The (Mg/Al)/Fe galvanic couple target was prepared from the AZ63 Mg/Al alloy and high purity Fe wires with an identical diameter of 0.76 mm. The wires were mounted in an epoxy resin sleeve (Struers, Ballerup, Denmark)., exposing only the disk shaped surfaces and allowing to make electric contact at the rear of the mould. Frontal surface of the mould was first polished with SiC paper down to 4000 grit, then with 1.0, 0.3 $\upmu$m alumina powder.
 
 SECM experiments were carried out employing homemade instrument operated with custom software. The sample was placed at the bottom of the electrochemical cell, whereas the local potential values of the Mg ISMEs were measured with against a Ag/AgCl (3M KCl) reference electrode. All the measurements were performed using a high input impedance eDAQ pH ISE isoPod USB(eDAQ Pty Ltd, Australia).
 
